:art: Fix virtual keyboard backspace alignment

--- a/octoprint_touchui/static/less/touchui.bundled.less
+++ b/octoprint_touchui/static/less/touchui.bundled.less
@@ -4797,6 +4797,7 @@ min-height: 70px;
 }
 }
 .ui-keyboard-preview {
+background: contrast(@keyboard-background);
 text-align: left;
 display: block !important;
 width: 100%;
