--- a/source/less/components/keyboard.less
+++ b/source/less/components/keyboard.less
@@ -173,7 +173,7 @@
 			border: 13px solid transparent;
 			border-right-color: contrast(@keyboard-background);
 			position: absolute;
-			left: -26px;
+			left: -25px;
 			top: 0;
 		}
 	}
@@ -269,6 +269,7 @@
 	}
 }
 .ui-keyboard-preview {
+	background: contrast(@keyboard-background);
 	text-align: left;
 	display: block !important;
 	width: 100%;
